Miscelaneous updates to WebCrypto to match latest spec.

* Matches version 2ac0c945d78d8b66246ce47c5a366a1fd6464aa5 of
   https://github.com/w3c/webcrypto
 * Adds comments referencing the spec procedure text
 * Renames "algorithm" --> "normalizedAlgorithm" to match spec text
 * Re-orders an algorithm normalization step
 * Changes DataError --> TypeError for an importKey() case

BUG=628413

Review-Url: https://codereview.chromium.org/2159313002
Cr-Commit-Position: refs/heads/master@{#406467}

Former-commit-id: c28c47588a5093e8383b497c6bc8732f088762b3